force-app/src/objects/proh__Deleted_Staging_Record__c.object
<CustomObject>
    <fields>
        <fullName>proh__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__ProcessingHub_Id__c</fullName>
        <externalId>true</externalId>
        <label>ProcessingHub Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Deleted Staging Record</label>
    <nameField>
        <displayFormat>DSR-{0}</displayFormat>
        <label>Deleted Staging Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deleted Staging Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>